# rust-photorec

./: Cargo.toml  README
assert_let/: Cargo.toml
assert_let/src/: assert_let.rs  lib.rs
photorec/: Cargo.toml
photorec/src/: file_description.rs  lib.rs  reader.rs
segment_tree/: Cargo.toml
segment_tree/src/: lib.rs  segment_array_tree.rs  segment_tree.rs
src/: byte_runs.rs  file_description.rs  file_description_tree.rs  filesystem.rs  lib.rs  reader.rs  reader_at.rs  report.rs  segment_array_tree.rs  segment_tree.rs
src/tests/: assert_let.rs  mod.rs
