[package]
name = "photorec"
version = "0.1.0"
authors = ["Amos Onn <amosonn@gmail.com>"]
description = "Rust interface for using photorec report.xml files."
edition = "2018"

[dependencies]
xmltree = "0.10.0"
thiserror = "1.0.19"
segment_tree = { path = "../segment_tree"}

[dev-dependencies]
assert_let = { path = "../assert_let"}
